--- a/machine.html
+++ b/machine.html
@@ -68,7 +68,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://snap.hr/popsa/job/software-engineer-data-and-machine-learning/60f377ba6a24a9a49eb68e1758c26d4d/'>Software Engineer ? Data and Machine Learning at Popsa</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698578720-phd-in-the-area-of-knowledge-based-machine-learning-for-autonomous-driving'>Bosch Group PhD ? in the area of knowledge-based Machine Learning for Autonomous Driving | SmartRecruiters</a></h5> 
@@ -99,7 +99,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/splunk/job/obkobfwO'>Splunk Careers - Product Manager - Machine Learning Content</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/splunk/job/obkobfwO'>Splunk Careers - Product Manager - Machine Learning Content</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -172,7 +172,7 @@ learning and computer vision to join our team.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TurnitinLLC/743999698333992-machine-learning-ml-engineer-core-ml'>Turnitin, LLC Machine Learning (ML) Engineer- Core ML | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TurnitinLLC/743999698333992-machine-learning-ml-engineer-core-ml'>Turnitin, LLC Machine Learning (ML) Engineer- Core ML | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -233,7 +233,7 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/agoda/jobs/1918844'>Job Application for Senior Machine Learning Engineer, Data Platform at Agoda</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/agoda/jobs/1918844'>Job Application for Senior Machine Learning Engineer, Data Platform at Agoda</a></h5> 
 <p><span class="badge badge-light">Bangkok Thailand?  Thailand</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -279,7 +279,7 @@ healthcare?...</p>
 <p><span class="badge badge-light">Wroclaw</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/opendoor/0794f867-9b94-42f7-9fbc-86acb95ea452'>Opendoor - Software Engineer (Machine Learning)</a></h5> 
+<h5><a href='https://jobs.lever.co/opendoor/0794f867-9b94-42f7-9fbc-86acb95ea452'>Opendoor - Software Engineer (Machine Learning)</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -291,7 +291,7 @@ healthcare?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://wrnch.recruitee.com/o/senior-machine-learning-developer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wrnch.recruitee.com/o/senior-machine-learning-developer'>
       Senior Machine Learning Developer - wrnch
     </a></h5> 
 <p><span class="badge badge-light">Montreal, Canada  Montreal</span></p>
@@ -419,7 +419,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Mobica/743999697536835-machine-learning-engineer'>Mobica  Machine Learning Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Mobica/743999697536835-machine-learning-engineer'>Mobica  Machine Learning Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -439,7 +439,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697742728-abschlussarbeit-automatisiertes-machine-learning'>Bosch Group Abschlussarbeit Automatisiertes Machine Learning | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697742728-abschlussarbeit-automatisiertes-machine-learning'>Bosch Group Abschlussarbeit Automatisiertes Machine Learning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
