--- a/deep-learning.html
+++ b/deep-learning.html
@@ -134,7 +134,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/tencent/jobs/4473307002'>Job Application for Deep Learning Researcher at Tencent</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tencent/jobs/4473307002'>Job Application for Deep Learning Researcher at Tencent</a></h5> 
 <p><span class="badge badge-light">Palo Alto</span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
@@ -158,7 +158,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://b10.recruitee.com/o/junior-applied-deeplearning-mfd-signatrix'>
+<h5><a href='https://b10.recruitee.com/o/junior-applied-deeplearning-mfd-signatrix'>
       Junior Applied Deep-Learning (m/f/d) | Signatrix - b10
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
@@ -346,7 +346,7 @@ design, build, and ship TensorRT: NVIDIA's high-performance deep learning?...</p
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on: 2019-09-18</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/samsungssi/job/oJY4afwF'>Samsung Semiconductor, Inc. Careers - Deep Learning Theory Researcher/ Scientist Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/samsungssi/job/oJY4afwF'>Samsung Semiconductor, Inc. Careers - Deep Learning Theory Researcher/ Scientist Intern</a></h5> 
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on: 2019-09-18</p>
 <hr/>
@@ -370,7 +370,7 @@ You have strong mathematical foundation in machine learning and deep learning
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-17</p>
 <hr/>
-<h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/NVIDIAExternalCareerSite/job/US-CA-Santa-Clara/Applied-Research-Intern---Deep-Learning_JR1923450-1'>Applied Research Intern - Deep Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/NVIDIAExternalCareerSite/job/US-CA-Santa-Clara/Applied-Research-Intern---Deep-Learning_JR1923450-1'>Applied Research Intern - Deep Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... We are now looking for a Deep Learning Software Intern to join our AI 
 Applications team: With Deep Learning, we can teach AI to do almost anything,
@@ -393,7 +393,7 @@ Skills at Crisalix.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1862075'>Job Application for Research Scientist (Machine Learning/Deep Learning) at Dataminr</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1862075'>Job Application for Research Scientist (Machine Learning/Deep Learning) at Dataminr</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
@@ -406,7 +406,7 @@ Clara, More... Software Intern, Math Libraries - CUDA | US, CA, Santa Clara.</p>
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-09-08</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/cardinalhire/8d744a8f-f26b-4932-abb6-2783eb9000ea'>Stealth Startup - Machine Learning and Deep Learning Research Scientist - up to $500,000 + 10% Equity</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cardinalhire/8d744a8f-f26b-4932-abb6-2783eb9000ea'>Stealth Startup - Machine Learning and Deep Learning Research Scientist - up to $500,000 + 10% Equity</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
@@ -464,7 +464,7 @@ from?...</p>
 Vision / Computational geometry. GIT version control (good knowledge). English
 ?...</p>
 <hr/>
-<h5><a href='https://crisalix.workable.com/j/2E94E69E63'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/2E94E69E63'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 18, 2019 ... Apply online for the job of Deep Learning Engineer with Strong iOS Development 
 Skills - Barcelona at Crisalix.</p>
@@ -490,7 +490,7 @@ machine learning algorithms, playing with state of the art deep learning models?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oSOMafwm'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
+<h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oSOMafwm'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
 <p><span class="badge badge-light">St. Louis, Missouri  Seattle, Washington  Chicago, Illinois</span></p>
 <p>Posted on: 2019-08-18</p>
 <hr/>
@@ -499,7 +499,7 @@ machine learning algorithms, playing with state of the art deep learning models?
 <p>Aug 7, 2019 ... Developer Technology Intern - AI | Canada, Toronto ? Deep Learning Intern ... 
 Compute Performance Developer Technology Intern - CUDA | Canada, Toronto.</p>
 <hr/>
-<h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/Canada-Toronto/Research-Scientist-Intern---Deep-Learning_JR1923743'>Research Scientist Intern - Deep Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/Canada-Toronto/Research-Scientist-Intern---Deep-Learning_JR1923743'>Research Scientist Intern - Deep Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 7, 2019 ... We are now looking for a Research Scientist Intern ? Deep Learning. NVIDIA is 
 searching for a world-class researcher to join our research team. We are?...</p>
