--- a/project-manager.html
+++ b/project-manager.html
@@ -40,12 +40,28 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/workiva/job/o5Qrbfwh'>Workiva Inc. Careers - Onboarding Project Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oah8afwt&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=nOzXpMw0'>ServiceNow Careers - Senior Learning Program Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/torrid/job/o9Mqbfwg'>Torrid Careers - Production Project Manager</a></h5> 
+<p><span class="badge badge-light">California</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://4re.referrals.selectminds.com/jobs/project-manager-i-27588'>Project Manager I - RELX Careers</a></h5> 
+<p><span class="badge badge-light">United States  Alpharetta, GA</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://nmhc.referrals.selectminds.com/jobs/project-manager-ii-epmo-full-time-days-33405'>Project Manager II-ePMO, Full-Time, Days - Northwestern Medicine Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/CityofPhiladelphia/743999698601255-continuum-of-care-program-manager-for-underrepresented-populations'>City of Philadelphia Continuum of Care Program Manager for Underrepresented Populations | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.crelate.com/portal/vangst/job/jjjussroh356bd3ku7thrcczry'>Marketing Project Manager  | Vangst</a></h5> 
@@ -62,11 +78,11 @@
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/generalassembly/jobs/1935163'>Job Application for Technical Project Manager at General Assembly</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/generalassembly/jobs/1935163'>Job Application for Technical Project Manager at General Assembly</a></h5> 
 <p><span class="badge badge-light">New York  New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/anaplan/jobs/4482084002?gh_src=659d87612'>Job Application for Senior Program Manager, Customer Operations at Anaplan</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/anaplan/jobs/4482084002?gh_src=659d87612'>Job Application for Senior Program Manager, Customer Operations at Anaplan</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -78,7 +94,7 @@
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/geotab/7c41c540-6302-413b-87b2-3c23bcd429bc'>Geotab - Senior Project Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/geotab/7c41c540-6302-413b-87b2-3c23bcd429bc'>Geotab - Senior Project Manager</a></h5> 
 <p><span class="badge badge-light">Canada  North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -122,7 +138,7 @@
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Lely1/743999698584768-project-manager-product-development-maassluis-fulltime-'>Lely Project Manager Product Development (Maassluis, fulltime) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Lely1/743999698584768-project-manager-product-development-maassluis-fulltime-'>Lely Project Manager Product Development (Maassluis, fulltime) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -136,7 +152,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698582038-strategic-project-manager-to-ceo-m-f-d-'>Omio Strategic Project Manager to CEO (m / f / d) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698582038-strategic-project-manager-to-ceo-m-f-d-'>Omio Strategic Project Manager to CEO (m / f / d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -168,7 +184,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/logitech/job/ojvrbfwa'>Logitech Careers - Project Manager, Package</a></h5> 
+<h5><a href='https://jobs.jobvite.com/logitech/job/ojvrbfwa'>Logitech Careers - Project Manager, Package</a></h5> 
 <p><span class="badge badge-light">Taiwan</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -180,7 +196,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/icertis/0caaa3d5-e80d-4d4c-8778-ead9f1990b6b'>Icertis - Senior Program Manager - Professional Services</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/icertis/0caaa3d5-e80d-4d4c-8778-ead9f1990b6b'>Icertis - Senior Program Manager - Professional Services</a></h5> 
 <p><span class="badge badge-light">Bellevue, Washington</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -232,7 +248,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.kyyti.com/jobs/312492-deployment-project-manager'>Deployment Project Manager - Kyyti Group</a></h5> 
+<h5><a href='https://careers.kyyti.com/jobs/312492-deployment-project-manager'>Deployment Project Manager - Kyyti Group</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -268,11 +284,11 @@
 <p><span class="badge badge-light">Missoula Atlanta, GAGlendale, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://cennox.applytojob.com/apply/JVVaaQkVGl/Electrical-Project-Manager'>Electrical Project Manager - Cennox - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://cennox.applytojob.com/apply/JVVaaQkVGl/Electrical-Project-Manager'>Electrical Project Manager - Cennox - Career Page</a></h5> 
 <p><span class="badge badge-light">Missoula Atlanta, GAGlendale, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://cennox.applytojob.com/apply/gF2TtWARGy/Electrical-Project-Manager'>Electrical Project Manager - Cennox - Career Page</a></h5> 
+<h5><a href='http://cennox.applytojob.com/apply/gF2TtWARGy/Electrical-Project-Manager'>Electrical Project Manager - Cennox - Career Page</a></h5> 
 <p><span class="badge badge-light">Missoula Atlanta, GAGlendale, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -351,7 +367,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/ariasystems/jobs/project-manager-bpdv-cqtyr6zdWaICoXfFy'>Project Manager #0185 job at Aria Systems in San Francisco, CA, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/ariasystems/jobs/project-manager-bpdv-cqtyr6zdWaICoXfFy'>Project Manager #0185 job at Aria Systems in San Francisco, CA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">San Francisco, CASan Francisco, CA San Francisco, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -367,7 +383,7 @@
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/umlaut/job/otmsbfwc'>umlaut North America Careers - Aerospace Project Manager - Supply Chain</a></h5> 
+<h5><a href='http://jobs.jobvite.com/umlaut/job/otmsbfwc'>umlaut North America Careers - Aerospace Project Manager - Supply Chain</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -433,24 +449,6 @@
 <hr/>
 <h5><a href='https://kimmel-associates.breezy.hr/p/92527fe6753d-project-engineer-assistant-project-manager'>Project Engineer - Assistant Project Manager</a></h5> 
 <p><span class="badge badge-light">Minneapolis, MN</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://burnsmcdonn.referrals.selectminds.com/jobs/project-manager-6805'>Project Manager - Burns & McDonnell Careers</a></h5> 
-<p><span class="badge badge-light">San Diego, California United States</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://burnsmcdonn.referrals.selectminds.com/jobs/ports-maritime-project-manager-6798'>Ports & Maritime Project Manager - Burns & McDonnell Careers</a></h5> 
-<p><span class="badge badge-light">United States  California</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://burnsmcdonn.referrals.selectminds.com/jobs/aviation-technology-systems-project-manager-6801'>Aviation Technology Systems Project Manager - Burns & McDonnell Careers</a></h5> 
-<p><span class="badge badge-light">United States</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='http://mainebhr.recruiterbox.com/jobs/fk03ia1'>
-    Education Specialist III: MLTI Project Manager  at State of Maine
-</a></h5> 
-<p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 
